2007-04-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched libwnck and zenity for 2.18.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Corrected display bug by adding silent
	directive.  

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Sort branches and add links to branches in
	the header.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Create two separate lists of releases.
	* releases.xml.in: Added status property to release tag.
	* templates/list-releases.tmpl: Display separately official and
	unofficial relseases.

2007-04-27  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added gnome-games manuals ported to g-d-u.
	* releases.xml.in: libgtop branched for 2.14.

2007-04-27  Vladimer Sichinava  <vsichi@gnome.org>

	* people.xml.in changed Georgian section.

2007-04-23  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added gnome-2-18 branch also for 2.14 and 2.16
	release of gnome-volume-manager.

2007-04-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-volume-manager, nautilus-cd-burner,
	gnome-screensaver branched for 2.18.
	gnome-devel-docs added to proposed modules for 2.20.

2007-04-22  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-doc-utils branched for 2.18.

2007-04-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added gnome-scan module in extras.

2007-04-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: devhelp and evince branched for 2.18.

2007-04-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: 
	* releases.xml.in: gconf branched for 2.18.
	brasero_0_6 branch also added to releases.xml.in.
	Corrected Changelog date for Djihed.

2007-04-16  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in: Added brasero_0_6 branch for Brasero 
