@@ -381,7 +381,7 @@
       <module id="gnome-applets"/>
       <module id="gnome-backgrounds"/>
       <module id="gnome-control-center" branch="gnome-2-18"/>
-      <module id="gnome-desktop"/>
+      <module id="gnome-desktop" branch="gnome-2-18"/>
       <module id="gnome-doc-utils" branch="gnome-2-18"/>
       <module id="gnome-games" branch="gnome-2-18"/>
       <module id="gnome-icon-theme" branch="gnome-2-18"/>
@@ -389,13 +389,13 @@
       <module id="gnome-keyring-manager"/>
       <module id="gnome-mag" branch="gnome-2-18"/>
       <module id="gnome-media"/>
-      <module id="gnome-menus"/>
+      <module id="gnome-menus" branch="gnome-2-18"/>
       <module id="gnome-netstatus"/>
       <module id="gnome-nettool" branch="gnome-2-18"/>
-      <module id="gnome-panel"/>
+      <module id="gnome-panel" branch="gnome-2-18"/>
       <module id="gnome-power-manager" branch="gnome-2-18"/>
       <module id="gnome-screensaver" branch="gnome-2-18"/>
-      <module id="gnome-session"/>
+      <module id="gnome-session" branch="gnome-2-18"/>
       <module id="gnome-system-monitor" branch="gnome-2-18"/>
       <module id="gnome-system-tools"/>
       <module id="gnome-terminal"/>
