@@ -1,3 +1,9 @@
+2007-05-02  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched gnome-panel, gnome-desktop, 
+	gnome-session and gnome-menus for 2.18.
+
 2007-04-30  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
